controller updated for static file