@@ -9,16 +9,19 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
-import java.nio.file.Files;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping("/public")
-
 public class StaticFilesController {
+
     @GetMapping(value = "/sitemap.xml", produces = MediaType.APPLICATION_XML_VALUE)
     public ResponseEntity<String> getSitemap() throws IOException {
         Resource resource = new ClassPathResource("static/public/sitemap.xml");
-        String content = new String(Files.readAllBytes(resource.getFile().toPath()));
+
+
+        String content = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+
         return ResponseEntity.ok()
                 .contentType(MediaType.APPLICATION_XML)
                 .body(content);
@@ -27,10 +30,11 @@ public class StaticFilesController {
     @GetMapping(value = "/robots.txt", produces = MediaType.TEXT_PLAIN_VALUE)
     public ResponseEntity<String> getRobots() throws IOException {
         Resource resource = new ClassPathResource("static/public/robots.txt");
-        String content = new String(Files.readAllBytes(resource.getFile().toPath()));
+
+        String content = new String(resource.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+
         return ResponseEntity.ok()
                 .contentType(MediaType.TEXT_PLAIN)
                 .body(content);
     }
-
 }
